welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value R
		if (litMessage()==R){
                                  ^BDRBuggle:15: error: not found: value A
		}else if (litMessage()==A){
                                        ^